--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -13,24 +13,25 @@
         android:id="@+id/counter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Basic counter" />
+        android:text="@string/basic_counter" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Complex login" />
+        android:text="@string/complex_login" />
 
     <Button
         android:id="@+id/loginViewModel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Complex login with ViewModel"/>
+        android:text="@string/complex_login_with_viewmodel"/>
 
-    <!--<Button-->
-        <!--android:id="@+id/multipleComponentsViewModel"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Multiple components with ViewModel"/>-->
+    <Button
+        android:id="@+id/multipleComponentsViewModel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="TODO: Multiple components"/>
 
 </LinearLayout>
